# -X-

./: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  proguard-rules.pro  settings.gradle.kts
.github/workflows/: Android.yml  AutoFix.yml  FixAndroidProject.yml
More/: MoreFeatures.kt  MoreToolsCore.kt  MoreToolsData.kt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  xrenderer.cpp
app/src/main/java/com/x/launcher/: MainActivity.kt  XApp.kt
app/src/main/java/com/x/launcher/client/: XClient.kt
app/src/main/java/com/x/launcher/core/: AccountManager.kt  ModManager.kt  RuntimeLauncher.kt  SkinManager.kt  VersionDownloader.kt  VersionManager.kt
app/src/main/java/com/x/launcher/game/: GameActivity.kt  TouchControls.kt
app/src/main/java/com/x/launcher/runtime/: AssetDownloader.kt  ClassLoader.kt  Gl4esManager.kt  InputBridge.kt  JREInstaller.kt  JVMRuntime.kt  LibraryDownloader.kt  RendererBridge.kt
app/src/main/java/com/x/launcher/ui/: XLauncherApp.kt
app/src/main/java/com/x/launcher/ui/components/: CenterContent.kt  LeftSkinButton.kt  PlayButton.kt  RightStatusCard.kt  TopBar.kt
app/src/main/java/com/x/launcher/ui/theme/: Color.kt  Theme.kt  Typography.kt
app/src/main/java/com/x/launcher/xop/: XOP.kt  XopConfig.kt  XopDeviceAnalyzer.kt  XopManager.kt  XopProfile.kt  XopState.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  splash_background.xml
app/src/main/res/values/: colors.xml  themes.xml
